--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,40 +1,48 @@
-    name: Build & Push Docker Image
+name: Build & Push Docker Image
 
-    on:
-      push:
-        branches:
-          - main # Trigger on pushes to the main branch
+on:
+  push:
+    branches:
+      - main # Trigger on pushes to the main branch
 
-    jobs:
-      build:
-        runs-on: ubuntu-latest # Use the latest Ubuntu runner
+jobs:
+  build:
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4 # Action to checkout your repository code
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4 # Action to checkout your repository code
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3 # Sets up Docker Buildx for multi-platform builds
+    - name: List files in root
+      run: ls -la
 
-        - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }} # Use the GitHub Secret for username
-            password: ${{ secrets.DOCKER_PASSWORD }} # Use the GitHub Secret for password
+    - name: List contents of RecipeShareClientV2
+      run: ls -la RecipeShareClientV2
 
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v5
-          with:
-            context: . # The build context is the root of your repository (where Dockerfile is)
-            file: ./Dockerfile # Path to your Dockerfile
-            push: true # Push the image to Docker Hub
-            tags: ${{ secrets.DOCKER_USERNAME }}/recipeshare:latest # Your Docker Hub username/image_name:tag
-            # Example tag: yourdockerhubusername/recipeshare:latest
-            cache-from: type=gha # Cache layers to speed up builds
-            cache-to: type=gha,mode=max
+    - name: List contents of Angular dist folder (if build succeeded)
+      run: ls -la RecipeShareClientV2/dist || true
 
-        # Optional: Add a step to run tests if you have any
-        # - name: Run .NET Tests (Example)
-        #   run: |
-        #     cd RecipeShare.API # Or the folder containing your test project
-        #     dotnet test
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3 # Sets up Docker Buildx for multi-platform builds
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }} # Use the GitHub Secret for username
+        password: ${{ secrets.DOCKER_PASSWORD }} # Use the GitHub Secret for password
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: . # The build context is the root of your repository (where Dockerfile is)
+        file: ./Dockerfile # Path to your Dockerfile
+        push: true # Push the image to Docker Hub
+        tags: ${{ secrets.DOCKER_USERNAME }}/recipeshare:latest # Your Docker Hub username/image_name:tag
+        cache-from: type=gha # Cache layers to speed up builds
+        cache-to: type=gha,mode=max
+
+    # Optional: Add a step to run tests if you have any
+    # - name: Run .NET Tests (Example)
+    #   run: |
+    #     cd RecipeShare.API # Or the folder containing your test project
+    #     dotnet test
